--- a/style-Odilo.css
+++ b/style-Odilo.css
@@ -38,6 +38,8 @@ html{
   background: #fff;
   position: sticky;
   top: 0;
+  z-index: 50;
+  box-shadow: 0 10px 15px -10px rgba(0,0,0,.35);
 }
 
 .header-inner{
@@ -50,8 +52,8 @@ html{
 
 .web-logo img{
   width: clamp(140px, 18vw, 210px);
-  height: 100%;
-  display: box;
+  height: auto;
+  display: block;
 }
 .brand{
   display: flex;
@@ -60,22 +62,100 @@ html{
   font-weight: 700;
 }
 
-.nav{
+.nav-desktop{
   display: flex;
   align-items: center;
   gap: 18px;
   flex-wrap: wrap;
+  text-decoration: none;
+}
+
+.nav-toggle{
+  display: none;
+  width: 44px;
+  height: 44px;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background: #fff;
+  border: 1px solid var(--line);
+  cursor: pointer;
+  padding: 10px;
+}
+
+.nav-toggle span{
+  display: block;
+  width: 22px;
+  height: 2px;
+  background: #111;
+  border-radius: 2px;
+  position: absolute;
+  left: 50%;
+  transition: transform .25 ease, opacity .2s ease;
+  transform: translateX(-50%);
+}
+.nav-toggle span:nth-child(1){top: 14px;}
+.nav-toggle span:nth-child(2){top: 21px;}
+.nav-toggle span:nth-child(3){top: 28px;}
+
+.nav-toggle.is-open span:nth-child(1){
+  transform: translateX(-50%) rotate(45deg);
+  top: 21px;
+}
+.nav-toggle.is-open span:nth-child(2){
+  opacity: 0;
+}
+.nav-toggle.is-open span:nth-child(3){
+  transform: translateX(-50%) rotate(-45deg);
+  top: 21px;
+}
+.nav-overlay{
+  position: fixed;
+  inset: 0;
+  backdrop-filter: blur(2px);
+  background: rgba(0,0,0,.4);
+  z-index: 60;
+  transition: opacity .25s ease;
+}
+
+.nav-drawer{
+  position: fixed;
+  top: 6vh;
+  right: 0;
+  width: min(40vw, 360px);
+  background: rgb(255, 255, 255);
+  box-shadow: -4px 0 24px rgba(0,0,0,.12);
+  z-index: 70;
+
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 24px 16px 32px;
+
+  transform: translateX(100%);
+  transition: transform .28s ease;
+}
+
+.nav-drawer.is-open{
+  transform: translateX(0);
+}
+
+.nav-drawer .nav-link{
+  text-decoration: none;
+  display: block;
+  color: #000000;
+  font-size: 14px;
+  padding: 8px 2px;
 }
 
 .nav-link{
   text-decoration: none;
   color: #000000;
   font-size: 14px;
-  padding: 8px 2px;
-  border-bottom: 3px solid transparent;
 }
 
-.nav-link:hover{
+.nav-drawer .nav-link:hover{
   color: var(--light-green);
 }
 
@@ -83,6 +163,7 @@ html{
   color: var(--green);
   border-bottom-color: var(--green);
   font-weight: 600;
+  border-bottom : 3px solid var(--green);
 }
 
 .page-title{
@@ -364,6 +445,14 @@ height: 16px;
 }
 
 @media (max-width: 700px) {
+  .nav-desktop{
+    display: none;
+  }
+
+  .nav-toggle{
+    display: inline-flex;
+  }
+
   .footer-inner {
     justify-content: center;
     flex-direction: column;
@@ -407,12 +496,20 @@ height: 16px;
   .food-img{
     height: 260px;
   }
+  .nav-overlay,
+  .nav-drawer{
+    display: none;
+  }
 }
-
+  @media (min-width: 901px){
+  .nav{
+    padding-top: 14px; /* 👈 "ganze Nav nach unten" */
+  }
+}
 /* Wide screens */
 @media (min-width: 1280px){
   .container{
-    width: min(1240px, calc(100% - 64px));
+    width: min(1440px, calc(100% - 64px));
   }
 
   .food-img{
@@ -423,7 +520,7 @@ height: 16px;
 /* Ultra-wide screens */
 @media (min-width: 1600px){
   .container{
-    width: min(1320px, calc(100% - 80px));
+    width: min(1920px, calc(100% - 80px));
   }
 }
 
