--- a/style-Odilo.css
+++ b/style-Odilo.css
@@ -47,7 +47,7 @@ html{
   align-items: center;
   justify-content: space-between;
   gap: 16px;
-  padding: 14px 0 ;
+  padding: 14px 0 0;
 }
 
 .web-logo img{
@@ -64,10 +64,11 @@ html{
 
 .nav-desktop{
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 18px;
   flex-wrap: wrap;
   text-decoration: none;
+  height: 80px;
 }
 
 .nav-toggle{
@@ -504,11 +505,7 @@ height: 16px;
     display: none;
   }
 }
-  @media (min-width: 901px){
-  .nav{
-    padding-top: 14px; /* 👈 "ganze Nav nach unten" */
-  }
-}
+
 /* Wide screens */
 @media (min-width: 1280px){
   .container{
