--- a/style-Odilo.css
+++ b/style-Odilo.css
@@ -59,7 +59,6 @@ html{
   display: flex;
   align-items: center;
   gap: 10px;
-  font-weight: 700;
 }
 
 .nav-desktop{
@@ -83,6 +82,7 @@ html{
   border: 1px solid var(--line);
   cursor: pointer;
   padding: 10px;
+  margin-bottom: 18px;
 }
 
 .nav-toggle span{
@@ -153,7 +153,8 @@ html{
 .nav-link{
   text-decoration: none;
   color: #000000;
-  font-size: 14px;
+  font-size: 18px;
+  padding: 10px 4px;
 }
 
 .nav-drawer .nav-link:hover{
@@ -468,7 +469,7 @@ height: 16px;
   .header-inner{
     flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 0px;
   }
 
   .social{
