Footer Logo debug

--- a/Style-Fabian.css
+++ b/Style-Fabian.css
@@ -358,7 +358,7 @@ h3 {
 /*  margin-right: 50px; */
 }
 
-.footer {
+/* .footer {
   margin-top: auto;
   position: relative;
   display: flex;
@@ -393,7 +393,7 @@ h3 {
 .social-media-icon {
   height: 40px;
   width: auto;
-}
+}*/
 .impressum-text {
   /* margin: 0 50px; */
   font-family: "Raleway", sans-serif;
