--- a/Style-Felix.css
+++ b/Style-Felix.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+/*
 .header {
   display: flex;
   justify-content: space-between;
@@ -76,6 +77,7 @@ body {
     height: auto;
     display: block;
 }
+
 .info_img {
     width: 20px;
     display: flex;
@@ -189,9 +191,9 @@ li {
     margin-right: 50px;
 }
 #portionen-btn {
-  background-color: #D3D3D3;
+  background-color: green;
   border: none;
-  color: black;
+  color: white;
   padding: 8px 16px;
   font-size: 16px;
   cursor: pointer;
@@ -201,74 +203,4 @@ li {
     font-family: "Raleway", sans-serif;
     margin-left: 20px;
     margin-right: 20px;
-}
-.Erstellt_von{
-    font-family: "Raleway", sans-serif;
-    margin-left: 40px;
-    font-size: 30px;
-}
-.Felix_img{
-    border-radius: 360px;
-    height: 100px;
-    margin-left: 40px;
-
-}
-.profil{
-    display: flex;
-    align-items: center; /* vertikal mittig */
-    gap: 10px; /* Abstand zwischen Bild & Name */
-    margin-bottom: 40px;
-
-}
-.Name{
-    font-family: "Raleway", sans-serif;
-    font-size: 30px;
-}
-
-.site-footer {
-  background: #222;
-  color: #fff;
-  padding: 18px 0;
-}
-
-.footer-inner {
-  max-width: 1200px;   /* Breitere Screens */
-  width: 100%;
-  margin: auto;      /* zentriert! */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-}
-
-.footer-logo img {
-  height: clamp(52px, 6vw, 75px);
-  width: auto;
-  filter: invert(1) brightness(1.2);
-}
-
-.social {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-
-.social-btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 8px;
-  transition: transform 0.15s ease, opacity 0.15s ease;
-}
-
-.social-btn img {
-  height: clamp(26px, 4vw, 40px);
-  width: auto;
-  display: block;
-}
-
-/* Hover */
-.social-btn:hover {
-  transform: translateY(-2px);
-  opacity: 0.9;
 }
