--- a/style-Odilo.css
+++ b/style-Odilo.css
@@ -504,7 +504,6 @@ height: 16px;
 }
 
 .card {
-  width: min(220px, 100%);
   text-decoration: none;
   color: inherit;
 }
@@ -528,7 +527,7 @@ height: 16px;
 .card-caption {
   text-align: center;
   margin-top: 10px;
-  font-size: 14px;
+  font-size: 18px;
   color: #2b2b2b;
 }
 
@@ -643,12 +642,15 @@ height: 16px;
     height: 200px;
   }
 
-    .hero {
+  .hero {
     grid-template-columns: 1fr;
   }
 
   .cards {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+    
   }
 
   .card-media {
