--- a/style-Odilo.css
+++ b/style-Odilo.css
@@ -241,6 +241,14 @@ height: 16px;
   border-top: 1px solid var(--line);
 }
 
+.ingredients-heading {
+  list-style: none;
+  margin: 24px 0 8px;
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--text);
+}
+
 .portion-controls{
   display: flex;
   align-items: center;
@@ -287,7 +295,7 @@ height: 16px;
   margin: 0;
 }
 
-.ingredients-list li:nth-child(even) {
+.ingredients-list .ingredient-item:nth-of-type(even) {
   background-color: #f2f2f2;
 }
 
